--- a/index.html
+++ b/index.html
@@ -93,6 +93,7 @@
  <div class="header-assets">
             <img src="leiria.png" alt="Logo 1">
             <img src="logo.png" alt="Logo 2">
+            <img src="logo3.png" alt="Logo 3">
         </div>
 
         <div id="digitalClock">00:00:00</div>
