--- a/index.html
+++ b/index.html
@@ -344,7 +344,7 @@ async function addFreguesias() {
                 return {
                     // CONTORNO ÚNICO PARA TODAS
                     stroke: true,
-                    color: "#000000",   // Cor única (Branco/Prata)
+                    color: "#2B4CE0",   // Cor contorno freguesias
                     weight: 2,          // Espessura média para definição clara
                     opacity: 0.2,       // Bem translúcido para ser discreto
 
